@@ -1,3 +1,8 @@
+2016-01-08  Mark Wielaard  <mjw@redhat.com>
+
+	* Makefile.am (TESTS): Always unconditionally add
+	run-readelf-zdebug.sh and run-readelf-zdebug-rel.sh.
+
 2015-12-16  Mark Wielaard  <mjw@redhat.com>
 
 	* run-compress-test.sh: New test.
